<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="dummy_content" translatable="false">dummy</string>

    <!-- Strings related to UI -->

    <string name="app_menu_title">CR Clock</string>
    <string name="app_name">Chinese Remainder Clock</string>
    <string name="welcome_string">Welcome to the Chinese Remainder Clock!</string>
    <string name="welcome_dialog_text">
        The tool bar offers Information on how the clock works (question mark),
        Settings for options on color, design, etc. (wrench), and
        simple Quizzes (pencil).
        Use the menu to switch from automatic to manual mode.
    </string>
    <string name="proceed_string">Go!</string>

    <string name="info_button_text">Information</string>
    <string name="info_button_text_short">Info</string>

    <string name="menu_manual">Manual</string>
    <string name="menu_automatic">Automatic</string>
    <string name="auto_button_text">Auto/Manual</string>
    <string name="auto_button_text_off">A</string>
    <string name="auto_button_text_on">M</string>

    <string name="dec_button">-1</string>
    <string name="inc_button">+1</string>
    <string-array name="unitStrings">
        <item>Hours</item>
        <item>Minutes</item>
        <item>Seconds</item>
    </string-array>

    <string name="color_button_text">Color/Monochrome</string>
    <string name="color_button_text_off">Color</string>
    <string name="color_button_text_on">B&amp;W</string>

    <string name="hours_button_text">12/24 hour</string>
    <string name="hours_button_text_off">12 hour</string>
    <string name="hours_button_text_on">24 hour</string>

    <!-- Strings related to Help (not sure I actually use this) -->

    <string name="title_activity_help" translatable="false">HelpActivity</string>
    <string name="title_activity_settings" translatable="false">Arghackle</string>

    <!-- Strings related to Settings -->
    <string name="action_settings">Settings</string>

    <string name="version">version</string>
    <string name="current_version" translatable="false">3.2</string>
    <string name="first_run" translatable="false">first_run</string>
    <string name="saved_hour" translatable="false">saved_hour</string>
    <string name="saved_color" translatable="false">saved_color</string>
    <string name="saved_drawer" translatable="false">saved_drawer</string>
    <string name="saved_show_seconds" translatable="false">saved_show_seconds</string>
    <string name="saved_show_time" translatable="false">saved_show_time</string>
    <string name="saved_reverse_orientation" translatable="false">saved_reverse_orientation</string>
    <string name="saved_bg_color" translatable="false">saved_bg_color</string>
    <string name="saved_line_color" translatable="false">saved_line_color</string>
    <string name="saved_hour_color" translatable="false">saved_hour_color</string>
    <string name="saved_minute_color" translatable="false">saved_minute_color</string>
    <string name="saved_second_color" translatable="false">saved_second_color</string>
    <string name="saved_bw_hour_color" translatable="false">saved_bw_hour_color</string>
    <string name="saved_bw_minute_color" translatable="false">saved_bw_minute_color</string>
    <string name="saved_bw_second_color" translatable="false">saved_bw_second_color</string>

    <string name="pref_category_design">Design</string>
    <string name="pref_category_design_summ">Settings related to the clock\'s design</string>

    <string name="pref_drawers">Art</string>
    <string name="design_pref_summary" translatable="false">
        Several circular and polygonal varieties available
    </string>
    <integer name="num_drawers">7</integer>
    <string-array name="drawStrings">
        <item>Archy: arc\'s position on circle tells remainder</item>
        <item>Bubbly: number of filled bubbles tells remainder</item>
        <item>Handy: traditional analog hands tell remainder</item>
        <item>Linus: number of highlighted sides tells remainder</item>
        <item>Ringy: ball\'s position on ring tells remainder</item>
        <item>Shady: remainders displayed in shaded polygon</item>
        <item>Vertie: highlighted vertex tells remainder</item>
    </string-array>
    <string-array name="drawStringValues" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string name="color_pref_text">Monochrome</string>
    <string name="color_pref_summary_on">Draw the clock in black-and-white</string>
    <string name="color_pref_summary_off">Draw the clock in color</string>

    <string name="hs_order_pref_text">Order of units</string>
    <string name="hs_order_pref_summ_on">Alternative order</string>
    <string name="hs_order_pref_summ_off">Standard order</string>

    <string name="pref_category_timekeeping">Timekeeping</string>
    <string name="pref_category_timekeeping_summ">Options for measuring and displaying time</string>

    <string name="seconds_pref_text">Seconds, too!</string>
    <string name="seconds_pref_summ_on">Show the representation of the seconds</string>
    <string name="seconds_pref_summ_off">Hide the representation of the seconds</string>
    <string name="show_time_pref_text">Show time</string>
    <string name="show_time_pref_summ_on">Write the conventional time next to the clock</string>
    <string name="show_time_pref_summ_off">Leave the conventional time off the clock</string>

    <string name="hours_pref_text">Hours on the clock</string>
    <string name="hours_button_text_off_long">12 hour clock</string>
    <string name="hours_button_text_on_long">24 hour clock</string>

    <string name="pref_category_color">Color</string>
    <string name="pref_category_color_summ">Change how the clock draws various colors</string>

    <string name="default_gray">Default (Gray)</string>
    <string name="default_white">Default (White)</string>
    <string name="default_blue">Default (Blue)</string>
    <string name="default_red">Default (Red)</string>
    <string name="default_green">Default (Green)</string>

    <string name="bg_color_text">Background color</string>
    <string name="line_color_text">Line color (when appropriate)</string>
    <string name="hour_color_text">Hour color</string>
    <string name="minute_color_text">Minute color</string>
    <string name="second_color_text">Second color</string>

    <!-- Quizzes -->
    <string name="quiz_menu_title">Quiz</string>
    <string name="quiz_3_4">3&#8211;4 Quiz</string>
    <string name="quiz_3_5">3&#8211;5 Quiz</string>
    <string name="quiz_4_5">4&#8211;5 Quiz</string>
    <string name="quiz_3_4_5">3&#8211;4&#8211;5 Quiz</string>
    <string name="quiz_master">Clock Master</string>

    <string name="question">Question</string>

    <string name="quiz_what_time_is_it">What time is it?</string>
    <string name="quiz_ab_guess">What number is it?</string>
    <string name="quiz_number_between">A number between 0 and</string>
    <string name="quiz_after_division_by">after division by</string>
    <string name="string_and"> and </string>

    <string name="quiz_hour_hint">HH</string>
    <string name="quiz_time_sep">:</string>
    <string name="quiz_minute_hint">MM</string>
    <string name="dummy_time" translatable="false">99:99:99</string>
    <string name="dummy_hour" translatable="false">99</string>
    <string name="autofill_hint_edittext">enter</string>

    <string name="quiz_next">Next!</string>
    <string name="quiz_result_title">Quiz result</string>
    <string name="quiz_nice_try">Nice try</string>
    <string name="quiz_result_better_luck">Better luck next time!</string>
    <string name="quiz_result_great_job">Great job!</string>
    <string name="quiz_result_keep_day_job">Keep the day job!</string>
    <string name="quiz_result_you_earned">You earned</string>
    <string name="quiz_result_dismiss_dialog_great">Awesome Sauce!</string>
    <string name="quiz_result_dismiss_dialog_better">Hope so!</string>
    <string name="quiz_result_dismiss_dialog_keep">Oof!</string>
    <string name="quiz_sorry">Sorry! it was</string>
    <string name="quiz_correct">Correct!</string>
    <string name="has">has</string>
    <string name="remainder">remainder</string>
    <string name="period" translatable="false">.</string>

    <string name="dial_use">Turn clock hand to answer</string>

    <string name="uninitialized_manual_hint" translatable="false">Need to initialize manual hint!</string>
    <string name="ringy_manual_hint">Drag ball to adjust time</string>
    <string name="vertie_manual_hint">Drag ball to adjust time</string>
    <string name="linus_manual_hint">Drag line to adjust time</string>
    <string name="bubbly_manual_hint">Touch bubbles to adjust time</string>
    <string name="shady_manual_hint">Drag up or down in polygons to adjust time</string>
    <string name="archy_manual_hint">Touch arch to adjust time</string>
    <string name="handy_manual_hint">Touch hands to adjust time</string>

    <string name="increase_hour">increment hour</string>
    <string name="increase_minute">increment minute</string>
    <string name="increase_second">increment second</string>
    <string name="decrease_hour">decrement hour</string>
    <string name="decrease_minute">decrement minute</string>
    <string name="decrease_second">decrement second</string>

</resources>
