<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools" tools:context=".Chinese_Remainder" >
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/quiz"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="200"
        android:title="@string/quiz_menu_title"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/information"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="300"
        android:title="@string/info_button_text"
        app:showAsAction="ifRoom"/>
</menu>
