<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/blank_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Chinese_Remainder$PlaceholderFragment">

    <view class="name.cantanima.chineseremainderclock.CRC_View"
        android:id="@+id/crc_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/time_display"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/time_display"
        android:layout_above="@+id/space_bw_crc_and_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="3"
        android:text="@string/dummy_time"
        android:textColor="@color/white"
        android:textSize="36sp"/>

    <Space
        android:id="@+id/space_bw_crc_and_toggle"
        android:layout_width="wrap_content"
        android:layout_height="12dp"
        android:layout_above="@id/manual_buttons"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"/>

    <LinearLayout
        android:id="@+id/manual_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/box"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/hour_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/arrow_up_float"
                android:contentDescription="@string/increase_hour"
                />
            <EditText
                android:id="@+id/hour_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/dummy_hour"
                android:autofillHints="@string/dummy_hour"
                tools:targetApi="o"
                android:layout_gravity="center"
                android:inputType="number"
                />

            <ImageButton
                android:id="@+id/hour_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/arrow_down_float"
                android:contentDescription="@string/decrease_hour"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_time_sep"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/minute_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/arrow_up_float"
                android:contentDescription="@string/increase_minute"
                />
            <EditText
                android:id="@+id/minute_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/dummy_hour"
                android:autofillHints="@string/dummy_hour"
                tools:targetApi="o"
                android:layout_gravity="center"
                android:inputType="number"
                />
            <ImageButton
                android:id="@+id/minute_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/arrow_down_float"
                android:contentDescription="@string/decrease_minute"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_time_sep"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/second_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/arrow_up_float"
                android:contentDescription="@string/increase_second"
                />
            <EditText
                android:id="@+id/second_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/dummy_hour"
                android:autofillHints="@string/dummy_hour"
                tools:targetApi="o"
                android:layout_gravity="center"
                android:inputType="number"
                />

            <ImageButton
                android:id="@+id/second_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/arrow_down_float"
                android:contentDescription="@string/decrease_second"
                />

        </LinearLayout>

        <!--<Button
            android:id="@+id/decrementButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/dec_button" />

        <Spinner
            android:id="@+id/selectUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/unitStrings"
            android:focusable="true"
            android:spinnerMode="dropdown" />

        <Button
            android:id="@+id/incrementButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/inc_button" />-->

    </LinearLayout>

    <!--<EditText
        android:id="@+id/timeEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:ems="5"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:hint="@string/autofill_hint_edittext"
        android:autofillHints="@string/autofill_hint_edittext"
        android:selectAllOnFocus="true"/>-->

</RelativeLayout>
