<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/quiz_ab_layout"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:background="@drawable/transparent_dialog"
              android:gravity="center"
>

    <TextView
        android:id="@+id/quiz_which"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/quiz_number_has_remainders"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
    >

        <TextView
            android:id="@+id/remainder_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            />

        <Space
            android:layout_width="6sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/string_and"
            />

        <Space
            android:layout_width="6sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/remainder_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/quiz_after_division_by"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/divisor_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            />

        <Space
            android:layout_width="6sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/string_and"
            />

        <Space
            android:layout_width="6sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/divisor_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/quiz_ab_guess"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="12sp"
        />

    <name.cantanima.chineseremainderclock.FlexibleNumberPicker
        android:id="@+id/quiz_ab_number_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:back_color="@drawable/transparent_dialog"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="12sp"
        />

    <Button
        android:id="@+id/quiz_accept_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/transparent_dialog"
        android:text="@string/quiz_next"
        android:textSize="12sp"/>

</LinearLayout>